BC-3647-3 created event